add icon user in mobile version

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <a class="flex-item" href="/index.html">
           <img class="logo" src="./assets/images/logo-horizontal.svg" alt="" />
         </a>
-        <div class="flex-item search-mobile visibleXs">
-          <i class="fas fa-search"></i>
+        <div class="flex-item search-mobile visibleXs connect">
+          <i class="far fa-user"></i>
         </div>
         <div class="flex-item search">
           <input type="text" />
